# physical_terrain_parameter_learning

./: .gitignore  LICENSE  README.md  header.txt
BaseWVN/: .gitignore  README.md  requirements.txt  setup.py
BaseWVN/BaseWVN/: __init__.py
BaseWVN/BaseWVN/config/: __init__.py  wvn_cfg.py
Phy_Decoder/: README.md  setup.py
Phy_Decoder/Phy_Decoder/: Decoder.py  Decoder_config.py  __init__.py  utils.py
base_wvn/: README.md  requirements.txt  setup.py
base_wvn/base_wvn/: __init__.py
base_wvn/src/wild_visual_navigation_ros/: CMakeLists.txt  setup.py
base_wvn/src/wild_visual_navigation_ros/launch/: play.launch  play.rviz  plotjuggler.xml
base_wvn/src/wild_visual_navigation_ros/scripts/: Main_process_node.py  foothold_physical_parameter_publisher.py  main_process_node.py  msg_to_transmatrix.py  phy_decoder_node.py  phy_publisher.py  physical_decoder_node.py  play_base_wvn.sh  play_rosbags.sh  ros_converter.py  ros_node.py  supervision_label_builder_node.py
phy_decoder/: README.md  requirements.txt  setup.py
phy_decoder/phy_decoder/: __init__.py  decoder.py  decoder_config.py  deployment_wrapper.py  utils.py
physical_decoder/: .gitignore  requirements.txt  setup.py
physical_decoder/physical_decoder/: decoder_config.py  deployment_wrapper.py  utils.py
physical_decoder_training/: requirements.txt  train.py  train_eval.py
physical_decoder_training/training_utils/: __init__.py  combine_dataset.py  data_manager.py  dataset_analysis.py  decoder.py  decoder_config.py  lightning_wrapper.py  loss_wrapper.py  modes.py  paradigms.py  run_config.py  utils.py
(+90 files in other folders)
